office/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: office
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: office
  template:
    metadata:
      labels:
        app: office
    spec:
      containers:
        - name: office
          image: ghcr.io/pmh-only/onlyoffice:latest-linux-arm64
          volumeMounts:
            - mountPath: /var/log/onlyoffice
              name: office-storage
              subPath: log
            - mountPath: /var/www/onlyoffice/Data
              name: office-storage
              subPath: data
            - mountPath: /var/lib/onlyoffice
              name: office-storage
              subPath: lib
            - name: office-cm
              mountPath: /etc/onlyoffice/documentserver/local-production-linux.json
              subPath: local-production-linux.json
      volumes:
        - name: office-storage
          hostPath:
            path: /mnt/data/office
        - name: office-cm
          configMap:
            name: office-cm
            items:
              - key: local-production-linux.json
                path: local-production-linux.json
