office/service.yml
apiVersion: v1
kind: Service
metadata:
  name: office-service
spec:
  selector:
    app: office
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
